# TemplateProject

./: .gitignore  README.md  pyproject.toml  setup.sh  tasks.py
src/: app.py
test/: test_app.py
